# sudoku-verifier-rust

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
testfiles/: test1.json  test2.json  test3.json  test4.json
