[package]
name = "sudoku-verifier-rust"
version = "0.1.0"
authors = ["Jeff Zarnett <jzarnett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.2"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }

serde = { version = "1.0.120", features = ["derive"] }
